add home and signup css

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -2,3 +2,15 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+/* ========================= */
+/*  titles
+/* ========================= */
+
+
+/* ========================= */
+/*  buttons
+/* ========================= */
+.btn {
+    cursor: pointer;
+}
