--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -2,15 +2,78 @@
     margin: 0;
     box-sizing: border-box;
 }
-
 /* ========================= */
-/*  titles
+/*  Navbar
 /* ========================= */
+.navbar-wrap {
+    background: rgba(0,0,0,0.9);
+}
 
+.navbar {
+    padding: 2px 0px;
+}
 
+.user-pic {
+    border-radius: 20%;
+    box-shadow: 0px 0px 0px 2px #eee;
+}
+
+.user-name {
+    margin-left: 10px;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.navbar .form-control {
+    margin-bottom: 0;
+}
+
+.dropdown-menu {
+    position: absolute;
+    right: 0;
+    left: 10;
+    margin-top: 5px;
+}
+
+.navbar .nav-link {
+    color: #FFF;
+    font-weight: bold;
+    font-size: 14px;
+    padding: 5px 10px;
+    transition-duration: 0.2s;
+    border-radius: 3px;
+}
+
+.navbar .nav-link:hover {
+    background: #28a745;
+}
+
+.my-lg-0 form, .my-lg-0 ul {
+    display: inline-flex;
+}
+.my-lg-0 form .form-control {
+    background: rgba(255,255,255,0.2);
+    color: #fff;
+    padding: 5px 15px;
+}
+.navbar form .form-control{
+    background-color: rgba(255,255,255,0.2);
+    transition: all .1s ease-out;
+}
+
+.navbar form .form-control:focus {
+    background: #fff;
+    color: #000;
+    border: 1px solid #000;
+}
+.navbar form .btn {
+    margin-right: 5px;
+}
 /* ========================= */
-/*  buttons
+/*  Buttons
 /* ========================= */
 .btn {
     cursor: pointer;
+    margin: 0
 }
