--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -14,6 +14,11 @@
 }
 
 .user-pic {
+    background-image: url( '/img/profile/ava_0.jpg' );
+    background-size: 140px 50px;
+    background-repeat: no-repeat;
+    width: 30px;
+    height: 30px;
     border-radius: 20%;
     box-shadow: 0px 0px 0px 2px #eee;
 }
