commit old changes

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,5 +1,5 @@
 body {
-    background: -webkit-linear-gradient(top, #276071 25%, #b7ad70 100%);
+    background: -webkit-linear-gradient(top, #7ca0bf 25%, #8e82b3 100%);
     background-attachment: fixed;
 }
 
