--- a/public/views/index.html
+++ b/public/views/index.html
@@ -20,11 +20,14 @@
         <link rel="stylesheet" href="/stylesheets/users.css" />
         <link rel="stylesheet" href="/stylesheets/teams.css" />
         <link rel="stylesheet" href="/stylesheets/team.css" />
-        <link rel="stylesheet" href="/stylesheets/search.css" />
+        <link rel="stylesheet" href="/stylesheets/loading.css" />
     </head>
     <body>
 		<div id="root"></div>
         <script src="http://localhost:35729/livereload.js"></script><!-- remove in production ENV -->
 		<script src="/js/index.min.js"></script>
+        <script>
+            $('[data-toggle="tooltip"]').tooltip();
+        </script>
     </body>
 </html>
