--- a/public/stylesheets/signup.css
+++ b/public/stylesheets/signup.css
@@ -1,8 +1,3 @@
-body {
-    background: -webkit-linear-gradient(top, #276071 25%, #b7ad70 100%);
-    background-attachment: fixed;
-}
-
 /* ========================= */
 /*  title
 /* ========================= */
@@ -47,7 +42,7 @@ body {
 
 .signup-form .form-control {
     background: rgba(255,255,255,0.2);
-    color: #fff;
+    color: #000;
     padding: 5px 15px;
     margin-bottom: 5px;
 }
