--- a/public/stylesheets/users.css
+++ b/public/stylesheets/users.css
@@ -36,3 +36,9 @@
     margin-right: 10px;
     margin-top: -5px;
 }
+
+.user-list-wrap .btn-xs {
+    margin-top: 5px;
+    padding: 4px 8px;
+    font-size: 13px;
+}
