--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,26 +1,70 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang = "en">
     <head>
-        <meta charset="UTF-8">
-        <meta ttp-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Edigames | Home</title>
-        <link rel="stylesheet" href="/css/font-awesome.min.css" />
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" />
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
-        <link rel="stylesheet" href="/stylesheets/main.css" />
-        <link rel="stylesheet" href="/stylesheets/index.css" />
-        <link rel="stylesheet" href="/stylesheets/signup.css" />
-        <link rel="stylesheet" href="/stylesheets/users.css" />
-        <link rel="stylesheet" href="/stylesheets/teams.css" />
-        <link rel="stylesheet" href="/stylesheets/team.css" />
-        <link rel="stylesheet" href="/stylesheets/loading.css" />
+        <!--
+            Authorization
+        -->
+        <script src = "/js/auth.min.js"></script>
+        <!--
+            Start Meta tags
+        -->
+        <meta charset = "UTF-8" />
+        <meta http-equiv = "X-UA-Compatible" content = "IE=edge" />
+        <meta name = "description" content = "Edigames | Everest" />
+        <meta name = "viewport" content = "width=device-width, initial-scale=1 shrink-to-fit=no" />
+        <!--
+            End meta tags
+        -->
+        <link rel = "shortcut icon" href = "/favicon.ico" />
+        <title>Everest</title>
+        <!--
+            Start Stylesheets
+        -->
+        <!--
+            Libs css
+        -->
+        <link rel = "stylesheet" href = "https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+        <link rel = "stylesheet" href = "https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" />
+        <!--
+            Custome css
+        -->
+        <link rel = "stylesheet" href = "/stylesheets/main.css" />
+        <link rel = "stylesheet" href = "/stylesheets/loading.css" />
+        <!--
+            End Stylesheets
+        -->
+        <!--
+            Start Libs js
+        -->
+        <script src = "https://code.jquery.com/jquery-3.2.1.min.js"></script>
+        <script src = "https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
+        <script src = "https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
+        <!--
+            End Libs js
+        -->
     </head>
     <body>
-		<div id="root"></div>
-        <script src="http://localhost:35729/livereload.js"></script><!-- remove in production ENV -->
-		<script src="/js/index.min.js"></script>
+        <!--
+            JS Required
+        -->
+        <noscript>
+            <div class = "js-require container">
+                <p>JavaScript Required.</p>
+                <span>This application doesn't work properly without javascript.</span>
+            </div>
+        </noscript>
+        <!--
+            End JS Required
+        -->
+		<div id = "root"></div>
+        <script src = "http://localhost:35729/livereload.js"></script><!-- remove this line in production ENV -->
+        <!--
+            Scripts
+        -->
+		<script src = "/js/index.min.js"></script>
+        <script src = "/js/main.min.js"></script>
+        <!--
+            End Scripts
+        -->
     </body>
 </html>
